add rel to anchores

--- a/index.html
+++ b/index.html
@@ -22,55 +22,55 @@
       </div>
       <div class="card__options">
         <div class="option">
-          <a class="option__icon" href="#" target="_blank">
+          <a class="option__icon" href="#">
             <i class="bi bi-telephone-fill"></i>
           </a>
           <span class="option__name">Llamar</span>
         </div>
         <div class="option">
-          <a class="option__icon" href="#" target="_blank">
+          <a class="option__icon" href="#" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-whatsapp"></i>
           </a>
           <span class="option__name">Whatsapp</span>
         </div>
         <div class="option">
-          <a class="option__icon" href="#" target="_blank">
+          <a class="option__icon" href="#">
             <i class="bi bi-envelope-fill"></i>
           </a>
           <span class="option__name">Email</span>
         </div>
         <div class="option">
-          <a class="option__icon" href="#" target="_blank">
+          <a class="option__icon" href="#" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-facebook"></i>
           </a>
           <span class="option__name">Facebook</span>
         </div>
         <div class="option">
-          <a class="option__icon" href="#" target="_blank">
+          <a class="option__icon" href="#" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-geo-alt-fill"></i>
           </a>
           <span class="option__name">Dirección</span>
         </div>
         <div class="option">
-          <a class="option__icon" href="#" target="_blank">
+          <a class="option__icon" href="#" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-globe"></i>
           </a>
           <span class="option__name">Sitio Web</span>
         </div>
         <div class="option">
-          <a class="option__icon" href="#" target="_blank">
+          <a class="option__icon" href="#" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-linkedin"></i>
           </a>
           <span class="option__name">Linkedin</span>
         </div>
         <div class="option">
-          <a class="option__icon" href="#" target="_blank">
+          <a class="option__icon" href="#" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-instagram"></i>
           </a>
           <span class="option__name">Instagram</span>
         </div>
         <div class="option">
-          <a class="option__icon" href="#" target="_blank">
+          <a class="option__icon" href="#" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-globe"></i>
           </a>
           <span class="option__name">Catálogo</span>
